cmake_minimum_required(VERSION 3.14)
project(corewar_git C)

set(CMAKE_C_STANDARD 11)

include_directories(includes)
include_directories(libft)
include_directories(libft/ft_printf)
include_directories(virtual_machine/includes)

add_executable(corewar_git
        includes/asm.h
        includes/op.h
        libft/ft_printf/calculate_decimal.c
        libft/ft_printf/decimal_part.c
        libft/ft_printf/find_conv_or_whitesp.c
        libft/ft_printf/ft_conv_b.c
        libft/ft_printf/ft_conv_d.c
        libft/ft_printf/ft_conv_f.c
        libft/ft_printf/ft_conv_o.c
        libft/ft_printf/ft_conv_p.c
        libft/ft_printf/ft_conv_u.c
        libft/ft_printf/ft_conv_x.c
        libft/ft_printf/ft_number.c
        libft/ft_printf/ft_printf.c
        libft/ft_printf/ft_printf.h
        libft/ft_printf/ft_symbol.c
        libft/ft_printf/integer_part.c
        libft/ft_printf/longadd.c
        libft/ft_printf/longdiv.c
        libft/ft_printf/longmulti.c
        libft/ft_printf/rounding_and_print.c
        libft/ft_printf/width.c
        libft/ft_printf/width_for_f.c
        libft/src/ft_atoi.c
        libft/src/ft_atoi_base.c
        libft/src/ft_bzero.c
        libft/src/ft_bzero_null.c
        libft/src/ft_change_system_over_ten.c
        libft/src/ft_free_two_dim_arr.c
        libft/src/ft_is_negative.c
        libft/src/ft_isalnum.c
        libft/src/ft_isalpha.c
        libft/src/ft_isascii.c
        libft/src/ft_isdigit.c
        libft/src/ft_islower.c
        libft/src/ft_isprint.c
        libft/src/ft_istabspace_in_str.c
        libft/src/ft_isupper.c
        libft/src/ft_iterative_factorial.c
        libft/src/ft_iterative_power.c
        libft/src/ft_itoa.c
        libft/src/ft_itoa_base.c
        libft/src/ft_itoa_ll.c
        libft/src/ft_lstadd.c
        libft/src/ft_lstdel.c
        libft/src/ft_lstdelone.c
        libft/src/ft_lstiter.c
        libft/src/ft_lstmap.c
        libft/src/ft_lstnew.c
        libft/src/ft_memalloc.c
        libft/src/ft_memccpy.c
        libft/src/ft_memchr.c
        libft/src/ft_memcmp.c
        libft/src/ft_memcpy.c
        libft/src/ft_memdel.c
        libft/src/ft_memmove.c
        libft/src/ft_memset.c
        libft/src/ft_power.c
        libft/src/ft_power_db.c
        libft/src/ft_putchar.c
        libft/src/ft_putchar_fd.c
        libft/src/ft_putendl.c
        libft/src/ft_putendl_fd.c
        libft/src/ft_putnbr.c
        libft/src/ft_putnbr_fd.c
        libft/src/ft_putstr.c
        libft/src/ft_putstr_fd.c
        libft/src/ft_range.c
        libft/src/ft_realloc.c
        libft/src/ft_revstr.c
        libft/src/ft_skip_whitesp.c
        libft/src/ft_sqrt.c
        libft/src/ft_strcat.c
        libft/src/ft_strchr.c
        libft/src/ft_strclr.c
        libft/src/ft_strcmp.c
        libft/src/ft_strcpy.c
        libft/src/ft_strdel.c
        libft/src/ft_strdup.c
        libft/src/ft_strequ.c
        libft/src/ft_striter.c
        libft/src/ft_striteri.c
        libft/src/ft_strjoin.c
        libft/src/ft_strlcat.c
        libft/src/ft_strlen.c
        libft/src/ft_strmap.c
        libft/src/ft_strmapi.c
        libft/src/ft_strncat.c
        libft/src/ft_strncmp.c
        libft/src/ft_strncpy.c
        libft/src/ft_strndup.c
        libft/src/ft_strnequ.c
        libft/src/ft_strnew.c
        libft/src/ft_strnlen.c
        libft/src/ft_strnstr.c
        libft/src/ft_strrchr.c
        libft/src/ft_strsplit.c
        libft/src/ft_strstr.c
        libft/src/ft_strsub.c
        libft/src/ft_strtrim.c
        libft/src/ft_swap.c
        libft/src/ft_swap_str.c
        libft/src/ft_tolower.c
        libft/src/ft_toupper.c
        libft/src/ft_uitoa_base.c
        libft/src/get_next_line.c
        libft/src/iswhitesp.c
        libft/libft.h
        virtual_machine/includes/operations.h
        virtual_machine/includes/virtual_machine.h
        virtual_machine/includes/visual.h
        virtual_machine/includes/vm_enums.h
        virtual_machine/src/initialization/initialization.c
        virtual_machine/src/initialization/set_params.c
        virtual_machine/src/parsing/parse_arguments.c
        virtual_machine/src/validation/read_byte_code.c
        virtual_machine/src/war/carriage_execution.c
        virtual_machine/src/war/carriage_interaction.c
        virtual_machine/src/war/check.c
        virtual_machine/src/war/execute_op.c
        virtual_machine/src/war/operations.c
        virtual_machine/src/war/start_war.c
        virtual_machine/src/exit.c
        virtual_machine/src/main.c virtual_machine/src/free/free_corewar.c)
